[package]
name = "jupiter"
version = "0.1.0"
authors = ["aha <aha@scireum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
log = "0.4.11"
bytes = "0.5.6"
simplelog = "0.8.0"
anyhow = "1.0.32"
num-traits = "0.2.12"
num-derive = "0.3.2"

[dev-dependencies]
tokio-test = "0.2.1"
criterion = "0.3"
redis = "0.17.0"

[[bench]]
name = "benches"
harness = false
