[package]
name = "jupiter-io"
version = "0.0.1"
authors = ["scireum GmbH <aha@scireum.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
jupiter = { path = "../jupiter-rs" }
tokio = { version = "1.12.0", features = ["full"] }
apollo-framework = "1.0.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"