[package]
name = "jupiter"
version = "0.0.1"
authors = ["scireum GmbH <info@scireum.de>"]
edition = "2021"
license = "MIT"
description = "Jupiter is a library for providing high-throughput ultra low latency services via the RESP protocol as defined by Redis."
readme = "../README.md"
repository = "https://github.com/scireum/jupiter"
categories = ["caching", "database-implementations", "network-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = "0.1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
bytes = "1.10"
simplelog = "0.12"
anyhow = "1.0"
num-traits = "0.2"
num-derive = "0.4"
yaml-rust = "0.4"
quick-xml = { version = "0.22", features = ["encoding"] }
linked-hash-map = "0.5"
encoding_rs = "0.8"
arc-swap = "1.6"
lazy_static = "1.4"
regex = "1.11"
memcmp = "0.0"
num_cpus = "1.16"
chrono = "0.4"
serde_json = "1.0"
mock_instant = "0.5"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
futures = "0.3"
async-trait = "0.1"
fnv = "1.0"
csv = "1.3"
itertools = "0.14"
time = "0.3"

[dev-dependencies]
# Achtung, die neuste Version (0.29+) schrottet die Tests wegen einem OS error 35
redis = "0.21.2"
